# patch_ipa

./: .gitignore  FridaGadget.config  README.md  override_info.plist.json  patch.py  pyproject.toml
Frameworks/CydiaSubstrate.framework/: CydiaSubstrate  Info.plist
Frameworks/CydiaSubstrate.framework/Commands/: cynject
Frameworks/CydiaSubstrate.framework/Libraries/: SubstrateBootstrap.dylib  SubstrateLauncher.dylib  SubstrateLoader.dylib
Libraries/: libfaketouch.dylib
